# cargo-compete

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README-ja.md  README.md  bors.toml  compete.toml
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml
resources/: atcoder-cargo-lock.toml  atcoder-deps.toml  atcoder-template-main.rs  compete.toml.liquid  default-gitignore  exec-base64-encoded-binary.rs.liquid  exec-base64-encoded-binary.rs.txt  template-main.rs
src/: config.rs  fs.rs  lib.rs  main.rs  oj_api.rs  open.rs  process.rs  project.rs  shell.rs  testing.rs
src/commands/: add.rs  init.rs  login.rs  migrate_cargo_atcoder.rs  migrate_packages.rs  migrate_v04.rs  mod.rs  new.rs  open.rs  participate.rs  retrieve_submission_summaries.rs  retrieve_testcases.rs  submit.rs  test.rs  watch_submissions.rs
src/web/: credentials.rs  mod.rs  retrieve_testcases.rs  url.rs
tests/: init.rs  login.rs  new.rs  test.rs
tests/common/: mod.rs
tests/snapshots/: init__atcoder_no_crate_file_tree.snap  init__atcoder_no_crate_output.snap  init__atcoder_use_crate_file_tree.snap  init__atcoder_use_crate_output.snap  init__atcoder_use_crate_via_bianry_file_tree.snap  init__atcoder_use_crate_via_bianry_output.snap  init__codeforces_file_tree.snap  init__codeforces_output.snap  init__codeforces_with_path_file_tree.snap  init__codeforces_with_path_output.snap  init__no_crate_file_tree.snap  init__no_crate_output.snap  init__use_crate_file_tree.snap  init__use_crate_output.snap  init__use_crate_via_bianry_file_tree.snap  init__use_crate_via_bianry_output.snap  login__atcoder_file_tree.snap  login__atcoder_output.snap  new__atcoder_abc003_file_tree.snap  new__atcoder_abc003_output.snap  new__atcoder_abc007_file_tree.snap  new__atcoder_abc007_output.snap  new__atcoder_agc047_file_tree.snap  new__atcoder_agc047_output.snap  new__atcoder_m_solutions2020_file_tree.snap  new__atcoder_m_solutions2020_output.snap  new__atcoder_practice_file_tree.snap  new__atcoder_practice_output.snap  new__yukicoder_contest_100_file_tree.snap  new__yukicoder_contest_100_output.snap  test__atcoder_practice_a_file_tree.snap  test__atcoder_practice_a_output.snap
