[package]
name = "cargo-compete"
version = "0.6.3"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand for competitive programming."
repository = "https://github.com/qryxip/cargo-compete"
readme = "README.md"
keywords = ["competitive", "cli", "windows"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[features]
default = []
__test_with_credentials = []

[dependencies]
anyhow = "1.0.34"
atty = "0.2.14"
az = "1.0.0"
base64 = "0.13.0"
derivative = "2.1.1"
dirs-next = "2.0.0"
easy-ext = "0.2.3"
fwdansi = "1.1.0"
git2 = "0.13.12"
heck = "0.3.1"
human-size = "0.4.1"
if_chain = "1.0.1"
ignore = "0.4.17"
indexmap = { version = "1.6.0", features = ["serde-1"] }
indicatif = "0.15.0"
itertools = "0.9.0"
krates = "0.5.0"
liquid = "0.21.4"
liquid-core = "0.21.2"
liquid-derive = "0.21.0"
maplit = "1.0.2"
opener = "0.4.1"
pretty_assertions = "0.6.1"
prettytable-rs = "0.8.0"
reqwest = { version = "0.10.9", default-features = false, features = ["blocking"] }
rpassword = "5.0.0"
rprompt = "1.0.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_yaml = "0.8.14"
shell-escape = "0.1.5"
snowchains_core = "0.5.2"
structopt = "0.3.20"
strum = { version = "0.20.0", features = ["derive"] }
tempfile = "3.1.0"
termcolor = "1.1.2"
tokio = { version = "0.2.22", features = ["signal"] }
toml = "0.5.7"
toml_edit = "0.2.0"
url = { version = "2.2.0", features = ["serde"] }
which = "4.0.2"

[target.'cfg(windows)'.dependencies]
term_size = "=1.0.0-beta.2"

[dev-dependencies]
insta = { version = "1.3.0", features = ["redactions"] }
once_cell = "1.5.2"
regex = "1.4.2"
