[package]
name = "cargo-compete"
version = "0.8.5"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand for competitive programming."
repository = "https://github.com/qryxip/cargo-compete"
readme = "README.md"
keywords = ["competitive", "cli", "windows"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[features]
default = []
__test_with_credentials = []

[dependencies]
anyhow = "1.0.38"
atty = "0.2.14"
az = "1.1.0"
base64 = "0.13.0"
derivative = "2.2.0"
dirs-next = "2.0.0"
easy-ext = "0.2.6"
fwdansi = "1.1.0"
git2 = "0.13.17"
heck = "0.3.2"
human-size = "0.4.1"
if_chain = "1.0.1"
ignore = "0.4.17"
indexmap = { version = "1.6.1", features = ["serde-1"] }
indicatif = "0.15.0"
itertools = "0.10.0"
krates = "0.6.0"
liquid = "0.21.5"
liquid-core = "0.21.3"
liquid-derive = "0.21.1"
maplit = "1.0.2"
opener = "0.4.1"
percent-encoding = "2.1.0"
pretty_assertions = "0.6.1"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.1", default-features = false, features = ["blocking"] }
rpassword = "5.0.1"
rprompt = "1.0.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_ignored = "0.1.2"
serde_json = "1.0.62"
serde_with = "1.6.4"
serde_yaml = "0.8.17"
shell-escape = "0.1.5"
snowchains_core = "0.10.0"
structopt = "0.3.21"
strum = { version = "0.20.0", features = ["derive"] }
tempfile = "3.2.0"
termcolor = "1.1.2"
tokio = { version = "1.2.0", features = ["signal"] }
toml = "0.5.8"
toml_edit = "0.2.0"
url = { version = "2.2.1", features = ["serde"] }
which = "4.0.2"

[target.'cfg(windows)'.dependencies]
term_size = "=1.0.0-beta.2"

[dev-dependencies]
insta = { version = "1.6.3", features = ["redactions"] }
once_cell = "1.7.0"
regex = "1.4.3"
