[package]
name = "cargo-compete"
version = "0.10.4"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand for competitive programming."
repository = "https://github.com/qryxip/cargo-compete"
readme = "README.md"
keywords = ["competitive", "cli", "windows"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[features]
default = []
__test_with_credentials = []

[dependencies]
anyhow = "1.0.54"
atty = "0.2.14"
az = "1.2.0"
base64 = "0.13.0"
camino = { version = "1.0.7", features = ["serde1"] }
cargo_metadata = "0.13.1"
derivative = "2.2.0"
dirs-next = "2.0.0"
easy-ext = "0.2.9"
fwdansi = "1.1.0"
git2 = "0.13.25"
heck = "0.3.3"
human-size = "0.4.1"
if_chain = "1.0.2"
ignore = "0.4.18"
indexmap = { version = "1.8.0", features = ["serde-1"] }
indicatif = "0.15.0"
itertools = "0.10.3"
krates = "0.7.0"
liquid = "0.22.0"
liquid-core = "0.22.0"
liquid-derive = "0.22.0"
maplit = "1.0.2"
once_cell = "1.9.0"
opener = "0.4.1"
percent-encoding = "2.1.0"
prettytable-rs = "0.8.0"
reqwest = { version = "0.11.9", default-features = false, features = ["blocking"] }
rpassword = "5.0.1"
rprompt = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_ignored = "0.1.2"
serde_json = "1.0.79"
serde_with = "1.12.0"
serde_yaml = "0.8.23"
shell-escape = "0.1.5"
snowchains_core = "0.13.2"
structopt = "0.3.26"
strum = { version = "0.20.0", features = ["derive"] }
tempfile = "3.3.0"
termcolor = "1.1.2"
tokio = { version = "1.17.0", features = ["signal"] }
toml = "0.5.8"
toml_edit = "0.8.0"
url = { version = "2.2.2", features = ["serde"] }
which = "4.2.4"

[target.'cfg(windows)'.dependencies]
term_size = "=1.0.0-beta.2"

[dev-dependencies]
insta = { version = "1.12.0", features = ["redactions"] }
pretty_assertions = "0.7.2"
regex = "1.5.4"
